# nusactl

./: .gitignore  INSTALL.md  Makefile.am  README.md  affinity.c  configure.ac  distance.c  manlinks  memhog.8  memhog.c  migratepages.8  migratepages.c  migspeed.8  migspeed.c  move_pages.2  shm.c  shm.h  stream_main.c  syscall.c  sysfs.c  util.c  util.h  versions.ldscript
test/: README  bind_range  checkaffinity  checktopology  distance.c  getnodemask.c  mbind_mig_pages.c  migrate_pages.c  move_pages.c  mynode.c  node-parse.c  nodemap.c  numademo  prefered.c  randmap.c  realloc_test.c  regress  regress2  runltp  shmtest  tbitmap.c  tshared.c  tshm.c
